AX: Fix disabled-controls-not-focusable.html in isolated tree mode by updating AXPropertyName::CanSetFocusAttribute when the disabled attribute changes https://bugs.webkit.org/show_bug.cgi?id=235246

Reviewed by Chris Fleizach.

Source/WebCore:

Fixes disabled-controls-not-focusable.html in isolated tree mode.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
Post a AXDisabledStateChanged notification when the disabled attribute changes.
(WebCore::AXObjectCache::updateIsolatedTree):
Handle the AXDisabledStateChanged notification to update AXPropertyName::CanSetFocusAttribute.
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):
Re-compute AXPropertyName::CanSetFocusAttribute when asked to do so.

Tools:

* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::isAttributeSettable):
Use new isAttributeSettable(NSString *attribute) helper function.
(WTR::AccessibilityUIElement::isAttributeSettable const):
Added. Dispatches call to accessibilityIsAttributeSettable on the AX thread.

(WTR::AccessibilityUIElement::isFocusable const):
(WTR::AccessibilityUIElement::isSelectable const):
Use new isAttributeSettable to reduce repetition.

LayoutTests:

* accessibility/disabled-controls-not-focusable-expected.txt:
* accessibility/disabled-controls-not-focusable.html:
Make this test async so that it can pass in isolated tree mode. This
test must be async because it dynamically changes the disabled
attribute via JS.
* platform/win/accessibility/disabled-controls-not-focusable-expected.txt:
Update Windows-specific expectation to match test changes.



Canonical link: https://commits.webkit.org/246078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288058 268f45cc-cd09-0410-ab3c-d52691b4dbfc